tools/asm/internal/parser/y.output

state 0
	$accept: .src $end 

	OP_CODE  shift 4
	.  error

	src  goto 1
	src_entries  goto 2
	src_entry  goto 3

state 1
	$accept:  src.$end 

	$end  accept
	.  error


state 2
	src:  src_entries.    (1)
	src_entries:  src_entries.src_entry 

	OP_CODE  shift 4
	.  reduce 1 (src line 23)

	src_entry  goto 5

state 3
	src_entries:  src_entry.    (2)

	.  reduce 2 (src line 25)


state 4
	src_entry:  OP_CODE.    (4)
	src_entry:  OP_CODE.DEC_NUM 
	src_entry:  OP_CODE.HEX_NUM 

	DEC_NUM  shift 6
	HEX_NUM  shift 7
	.  reduce 4 (src line 28)


state 5
	src_entries:  src_entries src_entry.    (3)

	.  reduce 3 (src line 26)


state 6
	src_entry:  OP_CODE DEC_NUM.    (5)

	.  reduce 5 (src line 29)


state 7
	src_entry:  OP_CODE HEX_NUM.    (6)

	.  reduce 6 (src line 30)


8 terminals, 4 nonterminals
7 grammar rules, 8/16000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
53 working sets used
memory: parser 3/240000
0 extra closures
4 shift entries, 1 exceptions
4 goto entries
0 entries saved by goto default
Optimizer space used: output 7/240000
7 table entries, 0 zero
maximum spread: 8, maximum offset: 7
